# watson-voice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml
src/: watson-voice-addon.conf  watson-voice-im.conf  watson-voice.cpp
watson_voice/: __main__.py  app.py  asr.py  asr_cohere.py  asr_voxtral.py  config.py  recorder.py  typer.py
